@@ -1,0 +1,6 @@
+
+C:  0  10  20  30  40  50  60  70  80  90 100 
+F: 32  50  68  86 104 122 140 158 176 194 212 
+
+F: 32  50  68  86 104 122 140 158 176 194 212 
+C:  0  10  20  30  40  50  60  70  80  90 100 
