@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2011  Paulo Cesar Pereira de Andrade.
+ * Copyright (C) 2012  Free Software Foundation, Inc.
  *
  * This is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
